# AI

fullstack-login-system/backend/: .gitignore  README.md  pyproject.toml  requirements.txt
fullstack-login-system/backend/app/: main.py  seed.py
fullstack-login-system/backend/app/api/: auth.py  deps.py
fullstack-login-system/backend/app/chat/: memory.py  rag.py  router.py
fullstack-login-system/backend/app/core/: config.py  security.py
fullstack-login-system/backend/app/db/: session.py
fullstack-login-system/backend/app/models/: user.py
fullstack-login-system/backend/app/repositories/: user_repository.py
fullstack-login-system/backend/app/schemas/: user.py
fullstack-login-system/backend/app/services/: auth_service.py
fullstack-login-system/frontend/: .eslintrc.json  .gitignore  README.md  package-lock.json  package.json
fullstack-login-system/frontend/src/: middleware.ts
fullstack-login-system/frontend/src/app/: globals.css  layout.tsx
fullstack-login-system/frontend/src/app/dashboard/: page.tsx
fullstack-login-system/frontend/src/app/login/: page.tsx
fullstack-login-system/frontend/src/components/chat/: ChatBox.tsx  ChatInput.tsx  DocumentUpload.tsx  MessageBubble.tsx
fullstack-login-system/frontend/src/hooks/: useAuth.ts  useChatStream.ts  useLogin.ts
fullstack-login-system/frontend/src/lib/: zod-schemas.ts
fullstack-login-system/frontend/src/store/: authStore.ts
